# API-stub-generator

./: .dockerignore  .gitignore  .stubrc.example.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: DEPRECATED.md  cli.py  config.py  create_insomnia_json.py  create_mock_endpoints.py  generator.py  openapi_generator.py  serialize_data.py  validator.py
src/commands/: generate.py  serve.py  watch.py
src/templates/: fastapi_app.j2  flask_app.j2
tests/: test_config.py  test_data_serialization.py  test_generator.py  test_mock_endpoint_creation.py  test_openapi.py  test_validator.py  utils.py
tests/test_files/: endpoints_data.json  proposed_endpoints.md
